fixed sidebar z-index issue

--- a/CBORD-style/_checkboxes.scss
+++ b/CBORD-style/_checkboxes.scss
@@ -98,7 +98,7 @@ label{
 	padding-left: 0;
 	position: relative;
 	transition: border-color .3s;
-	z-index: 2;
+	// z-index: 1;
 	transition: .2s ease background;
 }
 
